--- a/hakkimizda.html
+++ b/hakkimizda.html
@@ -114,7 +114,7 @@
       </div>
       <div class="grey-box eserler hakk-m-zda">
         <h2 class="heading-28 erik hakk-m-zda">Gelecek Projelerimiz</h2>
-        <p class="paragraph">Chopin dışında sevdiğim sanatçıların arşiv sitelerini oluşturmayı planlıyorum. Yalnızca müzik alanında değil, edebiyat ve resim alanında da erişilebilir arşiv siteleri kurmak isterim. Müzisyenlerden Debussy, Rachmaninoff; yazarlardan Anton Çehov, Dostoyevski; ressamlardan Giovanni Boldini, Ilya Repin üzerinde çalışmak istediğim sanatçılar.<br></p>
+        <p class="paragraph">Chopin dışında sevdiğim sanatçıların arşiv sitelerini oluşturmayı planlıyorum. Yalnızca müzik alanında değil, edebiyat ve resim alanında da erişilebilir arşiv siteleri kurmak isterim. Müzisyenlerden Debussy, Rachmaninoff; yazarlardan Anton Çehov, Dostoyevski; ressamlardan John Singer, Ilya Repin üzerinde çalışmak istediğim sanatçılar.<br></p>
       </div>
       <div class="grey-box eserler hakk-m-zda">
         <h2 class="heading-28 erik hakk-m-zda">Nasıl İletişime Geçebilirim ?</h2>
