--- a/eserler.html
+++ b/eserler.html
@@ -113,7 +113,7 @@
     <div class="grey-box eserler">
       <h2 class="heading-28">Eser Arşivi</h2>
       <h5 data-ix="title-slide-in-2" class="heading-12"><em class="italic-text">”</em>Sadelik nihai başarıdır.<em class="italic-text">”</em></h5>
-      <p class="paragraph">Eserler türlerine ve opus sayılarına göre ayrılmıştır. Zamanla opus, Kobylańska, Chomiński, Brown listeleri eklenecektir, ayrıca Chopin&#x27;in kaybolan eserleri arşivlenecektir.<br><br>Bazı sözcükleri çevirip çevirmemekte kararsız kaldım, genel olarak terim çevirilerini kendim yapmaya çalıştım. Eğer yanlış olduğunu düşündüğünüz bir çeviri veya çeviri öneriniz varsa bana bildirmeniz, beni mutlu eder.</p>
+      <p class="paragraph">Eserler türlerine ve opus sayılarına göre ayrılmıştır.<br><br>Bazı sözcükleri çevirip çevirmemekte kararsız kaldım, genel olarak terim çevirilerini kendim yapmaya çalıştım. Eğer yanlış olduğunu düşündüğünüz bir çeviri veya çeviri öneriniz varsa bana bildirmeniz, beni mutlu eder.</p>
     </div>
   </section>
   <div class="eser eserler wf-section">
