--- a/401.html
+++ b/401.html
@@ -2,6 +2,15 @@
 <!--  Last Published: Fri Sep 10 2021 18:43:39 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="60661d0d87fc3142259e7f00" data-wf-site="6065c94dd39b2db23a60cee2">
 <head>
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-RB4S4G8KHZ"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+	
+	  gtag('config', 'G-RB4S4G8KHZ');
+	</script>
   <meta charset="utf-8">
   <title>Korumalı Sayfa</title>
   <meta content="Korumalı Sayfa" property="og:title">
