--- a/eserler.html
+++ b/eserler.html
@@ -2,6 +2,15 @@
 <!--  Last Published: Fri Sep 10 2021 18:43:39 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="606634ef55368201172b1ef9" data-wf-site="6065c94dd39b2db23a60cee2">
 <head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-RB4S4G8KHZ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-RB4S4G8KHZ');
+</script>
   <meta charset="utf-8">
   <title>Eserler - Chopin Arşiv</title>
   <meta content="Frédéric Chopin&#x27;in eserlerini basit arayüzle ve kısa önizlemelerle inceleyin." name="description">
